# Plasma

./: .gitignore  CMakeLists.txt  FFT.cpp  Plasma_funcs.cpp  Plasma_funcs.h  Plasma_funcs.hpp  README.md  libPlasma.dylib
DynamicLib/: CMakeLists.txt  FFT.cpp  Plasma_funcs.cpp  libPlasma.dylib
StaticLib/: CMakeLists.txt  Plasma.hpp
StaticLib/src/: FFT.cpp  FFT.h  Plasma.cpp
